fixed prenav and navbar overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -1024,6 +1024,10 @@ input[type="range"]::-ms-fill-lower {
   pointer-events: none;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -1226,6 +1230,10 @@ input[type="range"]::-ms-fill-lower {
   z-index: auto;
 }
 
+.-z-50 {
+  z-index: -50;
+}
+
 .-m-1\.5 {
   margin: -0.375rem;
 }
@@ -1273,6 +1281,10 @@ input[type="range"]::-ms-fill-lower {
   margin-bottom: 2rem;
 }
 
+.\!ml-0 {
+  margin-left: 0px !important;
+}
+
 .-mb-px {
   margin-bottom: -1px;
 }
@@ -1303,6 +1315,10 @@ input[type="range"]::-ms-fill-lower {
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
 }
 
 .mb-8 {
@@ -1417,12 +1433,24 @@ input[type="range"]::-ms-fill-lower {
   margin-top: 2rem;
 }
 
-.mb-7 {
-  margin-bottom: 1.75rem;
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
-.\!ml-0 {
-  margin-left: 0px !important;
+.mr-10 {
+  margin-right: 2.5rem;
+}
+
+.mr-16 {
+  margin-right: 4rem;
+}
+
+.mr-14 {
+  margin-right: 3.5rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
 .block {
@@ -1562,6 +1590,18 @@ input[type="range"]::-ms-fill-lower {
   height: 100vh;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
 .max-h-\[90dvh\] {
   max-height: 90dvh;
 }
@@ -1638,10 +1678,6 @@ input[type="range"]::-ms-fill-lower {
   width: 1.5rem;
 }
 
-.w-60 {
-  width: 15rem;
-}
-
 .w-64 {
   width: 16rem;
 }
@@ -1678,10 +1714,6 @@ input[type="range"]::-ms-fill-lower {
 .w-max {
   width: -moz-max-content;
   width: max-content;
-}
-
-.w-40 {
-  width: 10rem;
 }
 
 .min-w-11 {
@@ -1950,6 +1982,10 @@ input[type="range"]::-ms-fill-lower {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .gap-1 {
@@ -3157,6 +3193,18 @@ input[type="range"]::-ms-fill-lower {
 
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.pr-12 {
+  padding-right: 3rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pr-5 {
+  padding-right: 1.25rem;
 }
 
 .text-left {
@@ -6087,6 +6135,10 @@ input[type="range"]::-ms-fill-lower {
     height: 1.75rem;
   }
 
+  .sm\:h-12 {
+    height: 3rem;
+  }
+
   .sm\:w-10 {
     width: 2.5rem;
   }
@@ -6180,6 +6232,10 @@ input[type="range"]::-ms-fill-lower {
 
   .md\:mt-0 {
     margin-top: 0px;
+  }
+
+  .md\:mr-14 {
+    margin-right: 3.5rem;
   }
 
   .md\:block {
@@ -6306,6 +6362,10 @@ input[type="range"]::-ms-fill-lower {
 }
 
 @media (min-width: 1024px) {
+  .lg\:visible {
+    visibility: visible;
+  }
+
   .lg\:my-8 {
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -6313,6 +6373,10 @@ input[type="range"]::-ms-fill-lower {
 
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:h-40 {
@@ -6327,10 +6391,6 @@ input[type="range"]::-ms-fill-lower {
     width: 75%;
   }
 
-  .lg\:w-64 {
-    width: 16rem;
-  }
-
   .lg\:w-80 {
     width: 20rem;
   }
@@ -6343,12 +6403,20 @@ input[type="range"]::-ms-fill-lower {
     width: 100%;
   }
 
+  .lg\:w-60 {
+    width: 15rem;
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
 
   .lg\:justify-around {
     justify-content: space-around;
+  }
+
+  .lg\:p-5 {
+    padding: 1.25rem;
   }
 
   .lg\:text-3xl {
@@ -6385,12 +6453,12 @@ input[type="range"]::-ms-fill-lower {
     display: none;
   }
 
-  .xl\:w-96 {
-    width: 24rem;
-  }
-
   .xl\:w-full {
     width: 100%;
+  }
+
+  .xl\:p-5 {
+    padding: 1.25rem;
   }
 
   .xl\:text-2xl {
